--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Nav start -->
     <nav>
       <div class="nav-content">
-        <h4 class="title">Ws.</h4>
+        <h4 class="title">Fa.</h4>
         <ul>
           <li><a href="#Home">Home</a></li>
           <li><a href="#Services">Service</a></li>
@@ -40,13 +40,13 @@
         <a href="https://www.instagram.com/wrasatria_/" target="_blank"
           ><img src="./assets/svg/instagram.svg" alt=""
         /></a>
-        <a href="https://www.tiktok.com/@wrasatriaa" target="_blank"
+        <a href="https://www.tiktok.com/@faturrahman_alf" target="_blank"
           ><img src="./assets/svg/tiktok.svg" alt=""
         /></a>
-        <a href="https://id.linkedin.com/in/wrasatria" target="_blank"
+        <a href="https://id.linkedin.com/in/faturrahman-alfarisi-3a1a65308" target="_blank"
           ><img src="./assets/svg/linkedin.svg" alt=""
         /></a>
-        <a href="https://www.facebook.com/wrasatriaa" target="_blank"
+        <a href="https://www.facebook.com/faturrahman.alfarisi.37" target="_blank"
           ><img src="./assets/svg/facebook.svg" alt=""
         /></a>
       </div>
@@ -54,16 +54,16 @@
       <section id="Home">
         <div class="home">
           <div class="home-content">
-            <h1 class="name">Wira Satria.</h1>
+            <h1 class="name">Faturrahman Alfarisi</h1>
             <div class="hero-image">
               <img class="blob" src="./assets/svg/blob.svg" alt="" />
-              <img class="satria" src="./assets/img/efafgaw 1.png" alt="" />
+              <img class="faturrahman" src="./assets/img/faturrahman.png" alt="" />
             </div>
-            <p>I will do a professional design for your business purpose.</p>
+            <p>Education Informatics & Computer Engineering at <span class="univ">Universitas Islam Negeri Sjech M. Djamil Djambek Bukittingi</span></p>
           </div>
           <div class="experience">
-            <h1 class="number">2</h1>
-            <h4 class="years">YEARS EXPERIENCE</h4>
+            <h1 class="number">1</h1>
+            <h4 class="years">YEAR EXPERIENCE</h4>
           </div>
         </div>
       </section>
@@ -75,25 +75,24 @@
           <h3 class="title">Services</h3>
           <h1>What can I do?</h1>
           <p class="description">
-            I will do a multimedia stuff like design an digital campaign, social
-            media, and many other things depens on business purpose.
+            I have experience developing websites using [HTML, CSS, JavaScript, PHP, etc.], as well as implementing scalable backend architectures. My focus is on creating fast, secure, and user-friendly applications.
           </p>
           <div>
             <div class="icon-skill">
               <div class="icon1">
-                <img src="./assets/svg/graphic.svg" alt="" />
-                <h5>Graphic Design</h5>
-                <p>200+ Design</p>
-              </div>
-              <div class="icon1">
                 <img src="./assets/svg/photography.svg" alt="" />
-                <h5>Photography</h5>
-                <p>100+ Photo</p>
+                <h5>Frontend</h5>
+                <p>200+ Project</p>
               </div>
               <div class="icon1">
-                <img src="./assets/svg/videography.svg" alt="" />
-                <h5>Videography</h5>
-                <p>50+ Video</p>
+                <img src="./assets/svg/web.svg" alt="" />
+                <h5>Backend</h5>
+                <p>100+ Project</p>
+              </div>
+              <div class="icon1">
+                <img src="./assets/svg/db.svg" alt="" />
+                <h5>Database</h5>
+                <p>20+ Project</p>
               </div>
             </div>
           </div>
@@ -101,33 +100,33 @@
           <div class="skill-cover">
             <div class="progress-skill">
               <div class="flex-column">
-                <h6>Adobe Photoshop</h6>
+                <h6>HTML</h6>
                 <div class="outside-bar">
                   <div class="bar-fill"><p>90%</p></div>
                 </div>
               </div>
               <div class="flex-column">
-                <h6>Adobe Illustrator</h6>
+                <h6>CSS</h6>
                 <div class="outside-bar">
                   <div class="bar-fill-2"><p>75%</p></div>
                 </div>
               </div>
               <div class="flex-column">
-                <h6>Adobe Premiere</h6>
+                <h6>JavaScript</h6>
                 <div class="outside-bar">
-                  <div class="bar-fill-3"><p>80%</p></div>
+                  <div class="bar-fill-3"><p>55%</p></div>
                 </div>
               </div>
               <div class="flex-column">
-                <h6>Capcut / VN</h6>
+                <h6>PHP</h6>
                 <div class="outside-bar">
-                  <div class="bar-fill-4"><p>90%</p></div>
+                  <div class="bar-fill-4"><p>75%</p></div>
                 </div>
               </div>
               <div class="flex-column">
-                <h6>Davici Resolve</h6>
+                <h6>CodeIgniter</h6>
                 <div class="outside-bar">
-                  <div class="bar-fill-5"><p>75%</p></div>
+                  <div class="bar-fill-5"><p>60%</p></div>
                 </div>
               </div>
             </div>
@@ -139,18 +138,14 @@
       <!-- Portfolio start -->
       <section id="Portfolio">
         <div class="portfolio">
-          <h3 class="title-portfolio">Portfolio | Photography</h3>
-          <h1 class="masterpiece">My Masterpiece Collection</h1>
+          <h3 class="title-portfolio">Portfolio | Project</h3>
+          <h1 class="masterpiece">My Masterpiece Project</h1>
           <div class="foto-portfolio">
-            <img class="photography" src="./assets/img/1.jpeg" alt="" />
-            <img class="photography" src="./assets/img/2.jpeg" alt="" />
-            <img class="photography" src="./assets/img/3.jpeg" alt="" />
-            <img class="photography" src="./assets/img/4.jpeg" alt="" />
-            <img class="photography" src="./assets/img/5.jpeg" alt="" />
-            <img class="photography" src="./assets/img/6.jpeg" alt="" />
-            <img class="photography" src="./assets/img/7.jpeg" alt="" />
-            <img class="photography" src="./assets/img/8.jpeg" alt="" />
-            <img class="photography" src="./assets/img/9.jpeg" alt="" />
+            <img class="project" src="/assets/img/1.png" alt="" />
+            <img class="project" src="/assets/img/2.png" alt="" />
+            <img class="project" src="/assets/img/3.png" alt="" />
+            <img class="project" src="/assets/img/4.png" alt="" />
+            <img class="project" src="/assets/img/5.png" alt="" />
           </div>
         </div>
       </section>
@@ -174,7 +169,7 @@
       </section>
       <footer>
         <div class="footer-content">
-          <h6>© 2024 Wira Satria</h6>
+          <h6>© 2024 Faturrahman Alfarisi</h6>
           <ul>
             <li><a href="#Home">Home</a></li>
             <li><a href="#Services">Services</a></li>
