--- a/index.html
+++ b/index.html
@@ -141,11 +141,11 @@
           <h3 class="title-portfolio">Portfolio | Project</h3>
           <h1 class="masterpiece">My Masterpiece Project</h1>
           <div class="foto-portfolio">
-            <img class="project" src="/assets/img/1.png" alt="" />
-            <img class="project" src="/assets/img/2.png" alt="" />
-            <img class="project" src="/assets/img/3.png" alt="" />
-            <img class="project" src="/assets/img/4.png" alt="" />
-            <img class="project" src="/assets/img/5.png" alt="" />
+            <img class="project" src="./assets/img/1.png" alt="" />
+            <img class="project" src="./assets/img/2.png" alt="" />
+            <img class="project" src="./assets/img/3.png" alt="" />
+            <img class="project" src="./assets/img/4.png" alt="" />
+            <img class="project" src="./assets/img/5.png" alt="" />
           </div>
         </div>
       </section>
