--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <div class="container">
       <div class="icon">
-        <a href="https://www.instagram.com/wrasatria_/" target="_blank"
+        <a href="https://www.instagram.com/faturrahman.alf/" target="_blank"
           ><img src="./assets/svg/instagram.svg" alt=""
         /></a>
         <a href="https://www.tiktok.com/@faturrahman_alf" target="_blank"
